# anchor-curd-opertion

./: Anchor.toml  package-lock.json  package.json
app/: package-lock.json  package.json
app/src/: App.tsx
app/src/components/: Home.module.css  Home.tsx
app/src/utils/: idl.json
programs/anchor-demo/: Cargo.toml
programs/anchor-demo/src/: lib.rs
tests/: anchor-demo.ts
